# Reddit-Clone

./: pyproject.toml  requirement.txt
app/: config.py  database.py  main.py  models.py  oauth2.py  schemas.py  test.py  utils.py
app/routes/: auth.py  redditposts.py  users.py  votes.py
test/: conftest.py  test_01_user.py  test_02_auth.py  test_03_post.py  test_04_votes.py
