[project]
name = "final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.3.0",
    "fastapi[all]>=0.115.12",
    "httpx>=0.28.1",
    "psycopg2>=2.9.10",
    "psycopg[binary]>=3.2.6",
    "pydantic-settings>=2.9.1",
    "pyjwt>=2.10.1",
    "pytest>=8.3.5",
    "sqlmodel>=0.0.24",
]
